fix flicker issue when dismissing a side overlay

--- a/src/components/SideOverlay/SideOverlay.module.scss
+++ b/src/components/SideOverlay/SideOverlay.module.scss
@@ -86,6 +86,7 @@
   left: 0;
   height: 100%;
   width: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .activeMask {
